--- a/tensorrt_experiement/tensorrt_experiement.vcxproj.filters
+++ b/tensorrt_experiement/tensorrt_experiement.vcxproj.filters
@@ -18,13 +18,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="README.md">
-      <Filter>docs</Filter>
-    </Text>
-  </ItemGroup>
-  <ItemGroup>
     <ClCompile Include="example1.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Filter>docs</Filter>
+    </None>
   </ItemGroup>
 </Project>
